# Copyright 2024 The Pigweed Authors
#
# Licensed under the Apache License, Version 2.0 (the "License"); you may not
# use this file except in compliance with the License. You may obtain a copy of
# the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
# WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
# License for the specific language governing permissions and limitations under
# the License.

load("@rules_python//sphinxdocs:sphinx_docs_library.bzl", "sphinx_docs_library")
load("@zephyr//:cc.bzl", "zephyr_cc_library")
load("//pw_build:compatibility.bzl", "incompatible_with_mcu")

package(default_visibility = ["//visibility:public"])

sphinx_docs_library(
    name = "docs",
    srcs = [
        "Kconfig",
        "docs.rst",
    ],
    prefix = "pw_sync_zephyr/",
    target_compatible_with = incompatible_with_mcu(),
)

zephyr_cc_library(
    name = "binary_semaphore",
    srcs = ["binary_semaphore.cc"],
    implementation_deps = ["//pw_assert:check"],
    deps = [
        ":public_includes",
        ":public_overrides_includes",
        "//pw_assert:assert",
        "//pw_chrono_zephyr:system_clock",
        "//pw_interrupt:context",
        "//pw_sync:binary_semaphore.facade",
    ],
)

zephyr_cc_library(
    name = "counting_semaphore",
    srcs = ["counting_semaphore.cc"],
    implementation_deps = ["//pw_assert:check"],
    deps = [
        ":public_includes",
        ":public_overrides_includes",
        "//pw_assert:assert",
        "//pw_chrono_zephyr:system_clock",
        "//pw_interrupt:context",
        "//pw_sync:counting_semaphore.facade",
    ],
)

zephyr_cc_library(
    name = "interrupt_spin_lock",
    implementation_deps = ["//pw_assert:check"],
    deps = [
        ":public_includes",
        ":public_overrides_includes",
        "//pw_interrupt:context",
        "//pw_sync:interrupt_spin_lock.facade",
    ],
)

zephyr_cc_library(
    name = "mutex",
    implementation_deps = ["//pw_assert:assert"],
    deps = [
        ":public_includes",
        ":public_overrides_includes",
        "//pw_interrupt:context",
        "//pw_sync:mutex.facade",
    ],
)

zephyr_cc_library(
    name = "timed_mutex",
    srcs = ["timed_mutex.cc"],
    implementation_deps = ["//pw_assert:check"],
    deps = [
        ":public_includes",
        ":public_overrides_includes",
        "//pw_chrono_zephyr:system_clock",
        "//pw_interrupt:context",
        "//pw_sync:mutex",
        "//pw_sync:timed_mutex.facade",
    ],
)

zephyr_cc_library(
    name = "timed_thread_notification",
    implementation_deps = ["//pw_assert:check"],
    deps = [
        ":public_includes",
        ":public_overrides_timed_thread_notification",
        "//pw_chrono_zephyr:system_clock",
        "//pw_interrupt:context",
        "//pw_sync:timed_thread_notification.facade",
    ],
)

zephyr_cc_library(
    name = "public_includes",
    hdrs = [
        "public/pw_sync_zephyr/binary_semaphore_inline.h",
        "public/pw_sync_zephyr/binary_semaphore_native.h",
        "public/pw_sync_zephyr/counting_semaphore_inline.h",
        "public/pw_sync_zephyr/counting_semaphore_native.h",
        "public/pw_sync_zephyr/interrupt_spin_lock_inline.h",
        "public/pw_sync_zephyr/interrupt_spin_lock_native.h",
        "public/pw_sync_zephyr/mutex_inline.h",
        "public/pw_sync_zephyr/mutex_native.h",
        "public/pw_sync_zephyr/timed_mutex_inline.h",
        "public/pw_sync_zephyr/timed_thread_notification_inline.h",
    ],
    strip_include_prefix = "public",
    deps = ["//pw_assert:assert"],
)

zephyr_cc_library(
    name = "public_overrides_includes",
    hdrs = [
        "public_overrides/pw_sync_backend/binary_semaphore_inline.h",
        "public_overrides/pw_sync_backend/binary_semaphore_native.h",
        "public_overrides/pw_sync_backend/counting_semaphore_inline.h",
        "public_overrides/pw_sync_backend/counting_semaphore_native.h",
        "public_overrides/pw_sync_backend/interrupt_spin_lock_inline.h",
        "public_overrides/pw_sync_backend/interrupt_spin_lock_native.h",
        "public_overrides/pw_sync_backend/mutex_inline.h",
        "public_overrides/pw_sync_backend/mutex_native.h",
        "public_overrides/pw_sync_backend/timed_mutex_inline.h",
    ],
    strip_include_prefix = "public_overrides",
)

zephyr_cc_library(
    name = "public_overrides_timed_thread_notification",
    hdrs = [
        "public_overrides/timed_thread_notification/pw_sync_backend/timed_thread_notification_inline.h",
    ],
    strip_include_prefix = "public_overrides/timed_thread_notification",
)
