# Copyright 2024 The Pigweed Authors
#
# Licensed under the Apache License, Version 2.0 (the "License"); you may not
# use this file except in compliance with the License. You may obtain a copy of
# the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
# WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
# License for the specific language governing permissions and limitations under
# the License.

load("@sphinxdocs//sphinxdocs:sphinx_docs_library.bzl", "sphinx_docs_library")
load("@zephyr//:cc.bzl", "zephyr_cc_library")
load("//pw_build:compatibility.bzl", "incompatible_with_mcu")

package(default_visibility = ["//visibility:public"])

zephyr_cc_library(
    name = "config",
    hdrs = ["public/pw_sys_io_zephyr/config.h"],
    strip_include_prefix = "public",
    deps = [":config_override"],
)

label_flag(
    name = "config_override",
    build_setting_default = "//pw_build:default_module_config",
)

zephyr_cc_library(
    name = "pw_sys_io_zephyr",
    srcs = ["//pw_sys_io_zephyr:sys_io.cc"],
    deps = [
        ":config",
        "//pw_sys_io:default_putget_bytes",
        "//pw_sys_io:pw_sys_io.facade",
        "@zephyr//modules/cmsis_6",
        "@zephyr_version//:version",
    ],
)

zephyr_cc_library(
    name = "backend",
    srcs = ["sys_io.cc"],
    deps = [
        ":config",
        "//pw_sys_io:default_putget_bytes",
        "//pw_sys_io:pw_sys_io.facade",
        "@zephyr_version//:version",
    ],
)

sphinx_docs_library(
    name = "docs",
    srcs = [
        "Kconfig",
        "docs.rst",
    ],
    prefix = "pw_sys_io_zephyr/",
    target_compatible_with = incompatible_with_mcu(),
)
