# Copyright 2024 The Pigweed Authors
#
# Licensed under the Apache License, Version 2.0 (the "License"); you may not
# use this file except in compliance with the License. You may obtain a copy of
# the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
# WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
# License for the specific language governing permissions and limitations under
# the License.

load("@sphinxdocs//sphinxdocs:sphinx_docs_library.bzl", "sphinx_docs_library")
load("@zephyr//:cc.bzl", "zephyr_cc_library")
load("//pw_build:compatibility.bzl", "incompatible_with_mcu")

package(default_visibility = ["//visibility:public"])

sphinx_docs_library(
    name = "docs",
    srcs = [
        "Kconfig",
        "docs.rst",
    ],
    prefix = "pw_thread_zephyr/",
    target_compatible_with = incompatible_with_mcu(),
)

zephyr_cc_library(
    name = "config",
    hdrs = ["public/pw_thread_zephyr/config.h"],
    strip_include_prefix = "public",
    deps = [":config_override"],
)

label_flag(
    name = "config_override",
    build_setting_default = "//pw_build:default_module_config",
)

zephyr_cc_library(
    name = "id",
    hdrs = [
        "id_public_overrides/pw_thread_backend/id_inline.h",
        "id_public_overrides/pw_thread_backend/id_native.h",
        "public/pw_thread_zephyr/id_inline.h",
        "public/pw_thread_zephyr/id_native.h",
    ],
    includes = [
        "id_public_overrides",
        "public",
    ],
    deps = [
        "//pw_assert:assert",
        "//pw_interrupt:context",
        "//pw_thread:id.facade",
    ],
)

zephyr_cc_library(
    name = "sleep",
    srcs = ["sleep.cc"],
    hdrs = [
        "public/pw_thread_zephyr/sleep_inline.h",
        "sleep_public_overrides/pw_thread_backend/sleep_inline.h",
    ],
    implementation_deps = ["//pw_assert:check"],
    includes = [
        "public",
        "sleep_public_overrides",
    ],
    deps = [
        "//pw_chrono:system_clock",
        "//pw_thread:sleep.facade",
        "//pw_thread:thread",
    ],
)

zephyr_cc_library(
    name = "thread",
    srcs = ["thread.cc"],
    hdrs = [
        "public/pw_thread_zephyr/context.h",
        "public/pw_thread_zephyr/options.h",
        "public/pw_thread_zephyr/priority.h",
        "public/pw_thread_zephyr/stack.h",
        "public/pw_thread_zephyr/thread_inline.h",
        "public/pw_thread_zephyr/thread_native.h",
        "thread_public_overrides/pw_thread_backend/thread_inline.h",
        "thread_public_overrides/pw_thread_backend/thread_native.h",
    ],
    includes = [
        "public",
        "thread_public_overrides",
    ],
    deps = [
        ":config",
        ":thread_creation",
        "//pw_assert:assert",
        "//pw_assert:check",
        "//pw_function",
        "//pw_preprocessor",
        "//pw_span",
        "//pw_string",
        "//pw_string:util",
        "//pw_thread:options",
        "//pw_thread:thread.facade",
    ],
)

zephyr_cc_library(
    name = "thread_creation",
    hdrs = [
        "thread_creation_public_overrides/pw_thread_backend/context.h",
        "thread_creation_public_overrides/pw_thread_backend/options.h",
        "thread_creation_public_overrides/pw_thread_backend/priority.h",
        "thread_creation_public_overrides/pw_thread_backend/stack.h",
    ],
    strip_include_prefix = "thread_creation_public_overrides",
    deps = [":config"],
)

zephyr_cc_library(
    name = "thread_iteration",
    srcs = [
        "pw_thread_zephyr_private/thread_iteration.h",
        "thread_iteration.cc",
    ],
    deps = [
        "//pw_bytes",
        "//pw_span",
        "//pw_status",
        "//pw_thread:thread_info",
        "//pw_thread:thread_iteration.facade",
    ],
)

zephyr_cc_library(
    name = "yield",
    hdrs = [
        "public/pw_thread_zephyr/yield_inline.h",
        "yield_public_overrides/pw_thread_backend/yield_inline.h",
    ],
    includes = [
        "public",
        "yield_public_overrides",
    ],
    deps = [
        "//pw_assert:assert",
        "//pw_thread:yield.facade",
    ],
)
