# Copyright 2026 The Pigweed Authors
#
# Licensed under the Apache License, Version 2.0 (the "License"); you may not
# use this file except in compliance with the License. You may obtain a copy of
# the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
# WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
# License for the specific language governing permissions and limitations under
# the License.

import("//build_overrides/pigweed.gni")

import("$dir_pw_build/target_types.gni")
import("$dir_pw_docgen/docs.gni")
import("$dir_pw_unit_test/test.gni")

# This target is declared in GN solely to satisfy the presubmit check that
# requires all C/C++ source files in the repository to be declared in GN.
# The Rust crate `pw_time` and this helper are built using Bazel.
pw_source_set("pw_time_backend_zephyr_helper") {
  sources = [ "rust/pw_time_backend_zephyr_helper.cc" ]
}

pw_test_group("tests") {
}

pw_doc_group("docs") {
  sources = [ "docs.rst" ]
}
