# Copyright 2026 The Pigweed Authors
#
# Licensed under the Apache License, Version 2.0 (the "License"); you may not
# use this file except in compliance with the License. You may obtain a copy of
# the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
# WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
# License for the specific language governing permissions and limitations under
# the License.

load("//pw_build:python.bzl", "pw_py_binary", "pw_py_library")

pw_py_library(
    name = "pw_bluetooth",
    srcs = [
        "pw_bluetooth/__init__.py",
        "pw_bluetooth/cli.py",
        "pw_bluetooth/preferences.py",
    ],
    data = [
        "pw_bluetooth/py.typed",
    ],
    imports = ["."],
    visibility = ["//visibility:public"],
    deps = [
        "//pw_build/py:pw_build",
        "//pw_config_loader/py:pw_config_loader",
    ],
)

pw_py_binary(
    name = "bluetooth",
    srcs = ["pw_bluetooth/cli.py"],
    main = "pw_bluetooth/cli.py",
    deps = [
        ":pw_bluetooth",
        "//pw_bluetooth_sapphire/py:pw_bluetooth_sapphire",
    ],
)
