# Copyright 2026 The Pigweed Authors
#
# Licensed under the Apache License, Version 2.0 (the "License"); you may not
# use this file except in compliance with the License. You may obtain a copy of
# the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
# WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
# License for the specific language governing permissions and limitations under
# the License.

import("//build_overrides/pigweed.gni")

import("$dir_pigweed/third_party/emboss/emboss.gni")
import("$dir_pw_build/target_types.gni")
import("$dir_pw_thread/backend.gni")
import("$dir_pw_unit_test/test.gni")

config("public_include_path") {
  include_dirs = [ "public" ]
  visibility = [ ":*" ]
}

# LINT.IfChange

_rfcomm_public = [
  "public/pw_bluetooth_proxy/rfcomm/internal/rfcomm_channel_internal.h",
  "public/pw_bluetooth_proxy/rfcomm/rfcomm_channel_manager_interface.h",
  "public/pw_bluetooth_proxy/rfcomm/rfcomm_common.h",
  "public/pw_bluetooth_proxy/rfcomm/rfcomm_config.h",
  "public/pw_bluetooth_proxy/rfcomm/rfcomm_manager.h",
]

# LINT.ThenChange(BUILD.bazel, CMakeLists.txt)

# LINT.IfChange

_rfcomm_public_deps = [
  "$dir_pw_bluetooth:emboss_rfcomm_frames",
  "$dir_pw_bluetooth:emboss_util",
  "$dir_pw_checksum",
  "$dir_pw_containers:intrusive_map",
  "$dir_pw_multibuf",
]

_rfcomm_sources = [
  "rfcomm_channel.cc",
  "rfcomm_channel_internal.cc",
  "rfcomm_manager.cc",
]

# LINT.ThenChange(Android.bp, rfcomm.bzl, CMakeLists.txt)

pw_source_set("rfcomm") {
  # LINT.IfChange
  public = _rfcomm_public
  public_configs = [ ":public_include_path" ]
  public_deps =
      [ "$dir_pw_bluetooth_proxy:pw_bluetooth_proxy" ] + _rfcomm_public_deps
  deps = []
  sources = _rfcomm_sources

  # LINT.ThenChange(Android.bp, BUILD.bazel, CMakeLists.txt)
}

pw_source_set("rfcomm_sync_mbv1") {
  public = _rfcomm_public
  public_configs = [ ":public_include_path" ]
  public_deps = [ "$dir_pw_bluetooth_proxy:pw_bluetooth_proxy_sync_mbv1" ] +
                _rfcomm_public_deps
  deps = []
  sources = _rfcomm_sources
}

pw_source_set("rfcomm_sync_mbv2") {
  public = _rfcomm_public
  public_configs = [ ":public_include_path" ]
  public_deps = [ "$dir_pw_bluetooth_proxy:pw_bluetooth_proxy_sync_mbv2" ] +
                _rfcomm_public_deps
  deps = []
  sources = _rfcomm_sources
  visibility = [ ":*" ]
}

pw_source_set("rfcomm_async_mbv1") {
  public = _rfcomm_public
  public_configs = [ ":public_include_path" ]
  public_deps = [ "$dir_pw_bluetooth_proxy:pw_bluetooth_proxy_async_mbv1" ] +
                _rfcomm_public_deps
  deps = []
  sources = _rfcomm_sources
  visibility = [ ":*" ]
}

pw_source_set("rfcomm_async_mbv2") {
  public = _rfcomm_public
  public_configs = [ ":public_include_path" ]
  public_deps = [ "$dir_pw_bluetooth_proxy:pw_bluetooth_proxy_async_mbv2" ] +
                _rfcomm_public_deps
  deps = []
  sources = _rfcomm_sources
  visibility = [ ":*" ]
}

# Tests

# LINT.IfChange

_rfcomm_test_sources = [
  "rfcomm_channel_internal_test.cc",
  "rfcomm_manager_test.cc",
]

_rfcomm_test_deps = [
  "$dir_pw_allocator:libc_allocator",
  "$dir_pw_allocator:testing",
]

# LINT.ThenChange(rfcomm.bzl, CMakeLists.txt)

pw_test("rfcomm_test_sync_mbv1") {
  enable_if =
      dir_pw_third_party_emboss != "" && pw_thread_THREAD_BACKEND != "" &&
      pw_thread_TEST_THREAD_CONTEXT_BACKEND != ""

  # LINT.IfChange
  sources = _rfcomm_test_sources
  deps = _rfcomm_test_deps + [
           ":rfcomm_sync_mbv1",
           "$dir_pw_multibuf:simple_allocator",
         ]

  # LINT.ThenChange(BUILD.bazel, CMakeLists.txt)
}

pw_test("rfcomm_test_sync_mbv2") {
  enable_if =
      dir_pw_third_party_emboss != "" && pw_thread_THREAD_BACKEND != "" &&
      pw_thread_TEST_THREAD_CONTEXT_BACKEND != ""

  # LINT.IfChange
  sources = _rfcomm_test_sources
  deps = _rfcomm_test_deps + [
           ":rfcomm_sync_mbv2",
           "$dir_pw_multibuf:simple_allocator",
         ]

  # LINT.ThenChange(BUILD.bazel, CMakeLists.txt)
}

pw_test("rfcomm_test_async_mbv1") {
  enable_if =
      dir_pw_third_party_emboss != "" && pw_thread_THREAD_BACKEND != "" &&
      pw_thread_TEST_THREAD_CONTEXT_BACKEND != ""
  sources = _rfcomm_test_sources
  deps = _rfcomm_test_deps + [
           ":rfcomm_async_mbv1",
           "$dir_pw_multibuf:simple_allocator",
         ]
}

pw_test("rfcomm_test_async_mbv2") {
  enable_if =
      dir_pw_third_party_emboss != "" && pw_thread_THREAD_BACKEND != "" &&
      pw_thread_TEST_THREAD_CONTEXT_BACKEND != ""
  sources = _rfcomm_test_sources
  deps = _rfcomm_test_deps + [
           ":rfcomm_async_mbv2",
           "$dir_pw_multibuf:simple_allocator",
         ]
}

pw_test_group("tests") {
  tests = [
    ":rfcomm_test_sync_mbv1",
    ":rfcomm_test_sync_mbv2",
    ":rfcomm_test_async_mbv1",
    ":rfcomm_test_async_mbv2",
  ]
}
